# cookiecutter-haskell

./: cookiecutter.json
{{cookiecutter.project_name}}/: default.nix  stack.yaml  {{cookiecutter.project_name}}.cabal
{{cookiecutter.project_name}}/app/: Main.hs
{{cookiecutter.project_name}}/src/: Lib.hs
