name:                {{cookiecutter.project_name}}
version:             0.0.0.1
homepage:            https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}
license:             BSD3
author:              {{cookiecutter.full_name}}
maintainer:          {{cookiecutter.email}}
copyright:           {{cookiecutter.full_name}}
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5

executable {{cookiecutter.project_name}}
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , {{cookiecutter.project_name}}
